[package]
name = "relend-program"
version = "1.0.0"
description = "Relend Program"
authors = ["Renec Maintainers <dev@renec.foundation>"]
license = "Apache-2.0"
edition = "2021"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
solana-program = "=1.13.3"
spl-token = { version = "3.2.0", features=["no-entrypoint"] }
relend-sdk = { path = "../sdk" }
static_assertions = "1.1.0"
bytemuck = "1.5.1"

[dev-dependencies]
assert_matches = "1.5.0"
bytemuck = "1.5.1"
base64 = "0.13"
log = "0.4.14"
proptest = "1.0"
solana-program-test = "=1.13.3"
solana-sdk = "=1.13.3"
serde = "=1.0.140"
serde_yaml = "0.8"
thiserror = "1.0"
bincode = "1.3.3"
borsh = "0.9.3"

[lib]
crate-type = ["cdylib", "lib"]
name = "relend_program"

[profile.release]
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1