[package]
name = "relend-sdk"
version = "1.0.0"
description = "Relend Sdk"
authors = ["RENEC Maintainers <dev@renec.foundation>"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
arrayref = "0.3.6"
bytemuck = "1.5.1"
num-derive = "0.3"
num-traits = "0.2"
solana-program = "=1.13.3"
spl-token = { version = "3.2.0", features=["no-entrypoint"] }
static_assertions = "1.1.0"
thiserror = "1.0"
uint = "=0.9.1"
anchor-lang = { git = "https://github.com/project-serum/anchor", tag = "v0.20.1", version = "0.20.1", package = "anchor-lang"}
borsh = "0.9.3"
borsh-derive = "0.9.3"

[dev-dependencies]
assert_matches = "1.5.0"
base64 = "0.13"
log = "0.4.14"
proptest = "1.0"
solana-sdk = "=1.13.3"
serde = "=1.0.140"
serde_yaml = "0.8"
rand = "0.8.5"

[lib]
crate-type = ["cdylib", "lib"]

[profile.release]
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
